# git-mcp-server

./: .dockerignore  .docs-manifest.yml  .env.example  .gitignore  .platform-standards.yml  .publish-exclude  AGENT-LESSONS.md  BUILD.md  CHANGELOG.md  CONTEXT-SUMMARY.md  COSIGN.md  Dockerfile.dev  Dockerfile.public  EXTERNAL-BUILD.md  NOTICE  PUBLICATION-SMOKE.md  README.md  REQUIREMENTS.txt  RULES.md  cosign.pub  defaults.yaml  docker-build.sh  docker-entrypoint.sh  docker-env.internal.example  docker-env.public.example  env-docker-example  healthcheck.sh  local-docker-server.sh  pyproject.toml  server_control.sh
archive/: AGENT-INSTRUCTION-BUILD-GIT-MCP.md  AGENT-INSTRUCTION-DOCKER-BUILD-TEST.md  AGENT-INSTRUCTION-FIX-GIT-MCP.md  AGENT-INSTRUCTION-FIX-TEST-INTEGRITY.md  AGENT-INSTRUCTION-REVALIDATE-TESTS.md  AGENT-INSTRUCTION-UNBLOCK-IT-HTTPS-REMOTE.md  ARCHITECTURE.md  QUALITY-GATE.md  REQUIREMENTS.md  STANDARDS.md  TESTS.md
database/: chat-client.db
database/migrations/cloud_dog_db/: README.md
docker/: docker-compose.yml
docs/: A2A-REFERENCE.md  API-REFERENCE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT-EVENTS.md  BUILD.md  CHANGELOG.md  DATA-MODEL.md  DEPLOY.md  DOCKER.md  ENV-REFERENCE.md  MCP-REFERENCE.md  MCP_DOCUMENTATION.md  PARAMETERS.md  PREPROD.md  RELEASE-1.0RC01.md  REQ-COVERAGE.md  REQUIREMENTS.md  ROLES-AND-USECASES.md  TASKS.md  TEST-HISTORY.md  TEST-STATUS.md  TESTS.md  WARRANTY-1.0RC01.md  WEBUI-REFERENCE.md  openapi.json
docs/archive/: USE_CASES.md
evidence/W28A-745/current/: 00-reading-proof.md  00A-936-937-service-tail-classification.tsv  CHECKSUMS.sha256  CHECKSUMS.verify.txt  FINAL-PROOF.md  FINAL-TAG-VERIFICATION.txt  external-dirty-ledger.tsv  final-evidence-validator.py  final-evidence-validator.txt  remote-proof.txt  requirements-map.tsv  scoped-clean-proof.txt  touched-paths-manifest.tsv
forensic-data/events/: a2a_config.jsonl
migration/verify/: README.md  verify-git-mcp-server-API-KIT.sh  verify-git-mcp-server-CONFIG.sh  verify-git-mcp-server-DB.sh  verify-git-mcp-server-IDAM.sh  verify-git-mcp-server-LOGGING.sh
scripts/: generate-api-docs.sh  run-integrity-guarded.sh  validate-vault.sh
src/git_mcp_server/: __init__.py  a2a_server.py  api_server.py  config_sources.py  flat_demo_keys.py  http_client.py  logging.py  main.py  mcp_server.py  traceability_requirements.py  ui_endpoints.py  web_flat_roles.py  web_server.py  web_ui.py  workspace_enum_endpoints.py
src/git_mcp_server/admin/: __init__.py  endpoints.py
src/git_mcp_server/auth/: __init__.py  middleware.py
src/git_mcp_server/jobs/: __init__.py  endpoints.py
src/git_tools/: __init__.py  process_env.py
src/git_tools/admin/: __init__.py  profile_store.py  roles_service.py  runtime.py
src/git_tools/audit/: __init__.py  events.py  logger.py
src/git_tools/change_stream/: __init__.py  criteria.py  service.py  wiring.py
src/git_tools/config/: __init__.py  loader.py  models.py
src/git_tools/db/: __init__.py  models.py  runtime.py
src/git_tools/files/: __init__.py  diff.py  io.py  search.py  validate.py
src/git_tools/git/: __init__.py  conflicts.py  observe.py  operations.py  recovery.py  repo.py  tags.py
src/git_tools/jobs/: __init__.py  runtime.py
src/git_tools/security/: __init__.py  git_auth.py  rbac.py  scope.py
src/git_tools/tools/: __init__.py  definitions.py  registry.py
src/git_tools/workspaces/: __init__.py  gc.py  locks.py  manager.py  ref_context.py
tests/: SCOPE-MAP.md  __init__.py  conftest.py  env-AT  env-AT-local-docker  env-AT-local-server  env-DB-mysql  env-DB-postgresql  env-FORENSIC-WEB  env-IT  env-IT-github  env-IT-local-docker  env-IT-local-server  env-QT  env-ST  env-ST-local-docker  env-ST-local-server  env-UT  env-UT-local-docker  env-UT-local-server  env-local-docker-server  helpers.py
tests/application/: conftest.py
tests/application/AT1.1_FullWorkflow_BranchEditPush/: test_fullworkflow_branch_edit_push.py
tests/application/AT1.2_FullWorkflow_TagBrowse/: test_fullworkflow_tag_browse.py
tests/application/AT1.3_FullWorkflow_ConflictResolve/: test_fullworkflow_conflict_resolve.py
tests/application/AT1.4_FullWorkflow_AdminProfileCRUD/: test_fullworkflow_admin_profile_crud.py
tests/application/AT1.5_FullWorkflow_RecoveryRestore/: test_fullworkflow_recovery_restore.py
tests/application/AT1.6_A2AHealthAuthContract/: test_a2a_health_auth_contract.py
tests/application/AT1.7_JWTAuthContract/: test_at_jwt_auth_contract.py
tests/application/AT_PROFILE_LIFECYCLE/: test_repo_profile_lifecycle.py
tests/application/AT_WEBUI/: test_webui_playwright.py
tests/e2e/: test_access_control_api_contract.py
tests/fixtures/: TEST-PACK-REFERENCE.md  seed_gitmcp_testdata.py
tests/integration/: conftest.py  test_git_mcp_idam_negative.py
tests/integration/IT1.10_RemoteBranchPush/: test_remote_branch_push.py
tests/integration/IT1.11_A2AHealthAuthContract/: test_it_a2a_health_auth_contract.py
tests/integration/IT1.12_JWTAuthContract/: test_it_jwt_auth_contract.py
tests/smoke/: test_access_control_matrix.py
tests/unit/: _tool_registry_harness.py
ui/: README.md
working/: W28A-101a-GIT-MCP-RESULT.md  W28A-12-REPORT.md  W28A-148E-GIT-MINI-REPORT.md  W28A-148E-R1-GIT-RESIDUAL-CLOSEOUT.md  W28A-148E-R2-GIT-DEPLOY-RERUN-CLOSEOUT.md  W28A-148E-R3-GIT-WORKFLOW-CLOSEOUT.md  W28A-148E-R4B-GIT-DEPLOY-WORKFLOW-RERUN.md  W28A-148E-R5B-GIT-REPO-CREDENTIAL-WORKFLOW-CLOSEOUT.md  W28A-148E-R6B-GIT-UI-WORKFLOW-FINAL-CLOSEOUT.md  W28A-95c-GIT-MCP-PREPROD-DEPTH-RESULT.md  W28A-95c-GIT-MCP-RESULT.md  w28a-95c-depth-grep.txt  w28a-95c-test-inventory.txt
working/W28A-148E-R2/: live-admin-users.html  local-image-inspect-w28a-148e-r2-7583cb9.json  runtime-container-inspect.json
working/W28A-148E-R5B/: health.json  runtime-container-proof.txt  runtime-env-redacted-proof.txt
working/W28C-1710a/: KNOWLEDGE-PRESERVATION-WARRANTY.md
working/W28C-1710b/: KNOWLEDGE-PRESERVATION-DELTA.md  REQUIREMENTS-DESIGN-DELTA.md  consolidation-plan.tsv
working/W28C-1711/: KNOWLEDGE-PRESERVATION-DELTA.md  probe-retention-register.tsv  sha-chain.tsv
(+149 files in other folders)
