[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-mcp-server"
version = "0.1.1RC1"
description = "API-first MCP server for Git repository workflows and branch-scoped file/directory tooling."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
dependencies = [
    # Platform packages
    "cloud_dog_config==0.3.5",
    "cloud_dog_logging==0.4.1",
    # W28E-1870-C: consume the common cross-service change-streaming foundation
    # (PS-102) with the durable SqlJournal extra — no bespoke journal/cursor/queue.
  "cloud_dog_api_kit[change-stream-db]==0.14.1",
    "cloud_dog_idam==0.5.4",
    "cloud_dog_llm==0.4.1",
    "cloud_dog_db==0.3.3",
    "cloud_dog_jobs==0.4.4",
    "cloud_dog_cache==0.2.3",
    "cloud_dog_storage==0.1.8",
    # Core runtime
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "PyYAML>=6.0.1,<7.0",
    "typing-extensions>=4.10,<5.0",
    # Git operations
    "GitPython>=3.1.43,<4.0",
    # File tooling
    "filelock>=3.15,<4.0",
    "chardet>=5.2,<6.0",
    # Structured formats (edits + validation)
    "jsonschema>=4.22,<5.0",
    "lxml>=6.1.0",
    "beautifulsoup4>=4.12,<5.0",
    "markdown-it-py>=3.0,<4.0",
    "ruamel.yaml>=0.18.6,<1.0",
    # Diff helpers
    "deepdiff>=8.6.2,<9.0",
    "unidiff>=0.7.5,<1.0",
    # Secrets / credentials
    "cryptography>=48.0.1",
    "hvac>=2.3,<3.0",
    # ASGI server runtime for api_server.py / mcp_server.py entrypoints
    "uvicorn>=0.30,<1.0",
    "websockets>=12,<16",
]

[project.optional-dependencies]
dulwich = ["dulwich>=0.22.6,<1.0"]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-timeout>=2.3,<3.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "httpx>=0.27,<1.0",
    "websocket-client>=1.8,<2.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["UP017"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:cloud_dog_config --basetemp=working/pytest-tmp"
markers = [
    # Tier markers — PS-REQ-TEST-TRACE v1.0 §6
    "QT: quality/compliance tests (static analysis, package checks, documentation)",
    "UT: unit tests (fast, no network, no live service)",
    "ST: system tests (service-level behaviour, may require a running instance)",
    "IT: integration tests that require live network/server behaviour",
    "AT: application tests (end-to-end, full-stack, Playwright WebUI)",
    "integration: alias kept for backwards compatibility (maps to IT)",
    # Surface markers — PS-REQ-TEST-TRACE v1.0 §6
    "api: tests exercising the HTTP REST API surface",
    "mcp: tests exercising the MCP tool surface",
    "a2a: tests exercising the A2A skill surface",
    "webui: tests exercising the browser WebUI surface (Playwright)",
    "cli: tests exercising CLI entry-points",
    "internal: tests of internal modules / helpers with no external surface",
    # Qualifier markers
    "negative: negative/error-path test (expects rejection/error)",
    "probe: orphan test without a bound req() — retained pending operator REQ-binding",
    "slow: test expected to take >30 s",
    "llm: test that calls a live LLM (may be slow or costly)",
    # Parametrised binding marker — req(*ids) — PS-REQ-TEST-TRACE v1.0 §6
    "req: bind test to one or more requirement IDs, e.g. @pytest.mark.req('FR-001')",
]

[tool.hatch.build]
exclude = [
    "/.git",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/.tmp-tests",
    "/.pids",
    "/certs",
    "/data",
    "/dist",
    "/logs",
    "/working",
    "/vendor",
]

[tool.hatch.build.targets.wheel]
packages = ["src/git_mcp_server", "src/git_tools"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "README.md",
    "pyproject.toml",
    "REQUIREMENTS.txt",
    "defaults.yaml",
    "ARCHITECTURE.md",
    "QUALITY-GATE.md",
    "RULES.md",
    "STANDARDS.md",
    "TESTS.md",
]

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/git-mcp-server"
